--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 datasets = "^3.2.0"
 transformers = "^4.48.1"
 matplotlib = "^3.10.0"
+pylibdmtx = "^0.1.10"
+torch = "^2.6.0"
 
 
 [build-system]
